--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -51,7 +51,7 @@ a {
   padding: 1rem 2rem;
   border-radius: 4px;
   font-family: inherit;
-  font-size: 2.5vmin;
+  font-size: 24px;
   font-weight: 700;
   color: #fff;
   transition: background-color 0.25s ease-in-out,
@@ -59,6 +59,10 @@ a {
   text-decoration: none;
   display: inline-block;
   user-select: none;
+  
+  @media (min-width: 500px) and (min-height: 500px) {
+    font-size: 2.5vmin;
+  }
 
   &:hover,
   &:focus {
